添加MarkDown类（用于处理解析MarkDown） 添加显示MarkDown内容的RecyclerView的适配器及item布局文件 主页添加跳转用按钮。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MarkDownView</string>
+    <string name="btn1_text">解析source.md</string>
+    <string name="btn2_text">自定义测试输入</string>
 </resources>
