1. 添加显示解析内容的页面和自定义输入的页面及布局，字符串引用资源等。 2. 封装MarkDownView，用于显示MarkDown内容。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MarkDownView</string>
     <string name="btn1_text">解析source.md</string>
     <string name="btn2_text">自定义测试输入</string>
+    <string name="btn_parse">解析输入的MarkDown语句</string>
+    <string name="markdown_et_hint">请输入要解析的MarkDown语句</string>
 </resources>
